# phage

./: .gitignore  LICENSE  Makefile  README.md  install.sh
contrib/: config.example.toml  phage-node.service
coordinator/: Cargo.toml  build.rs
coordinator/src/: dispatch.rs  main.rs  state.rs  verify.rs
node/: pyproject.toml
node/phage_node/: attestation.py  chat.py  cli.py  config.py  daemon.py  gpu.py  sandbox.py  vllm_manager.py
proto/: phage.proto
tasks/binary-search/: prompt.md  verify.sh
tasks/csv-sum/: prompt.md  sales.csv  verify.sh
tasks/fizzbuzz/: prompt.md  verify.sh
tasks/json-parser/: prompt.md  verify.sh
tasks/rate-limiter/: prompt.md  verify.sh
