[package]
name = "phage-coordinator"
version = "0.1.4"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"
