[project]
name = "phage-node"
version = "0.1.3"
description = "GPU node daemon for the phage distributed inference network"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "pynvml>=11.5",
    "toml>=0.10",
    "vllm>=0.4",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.scripts]
phage-node = "phage_node.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
